<resources>
    <string name="app_name">Mc Agonias</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_name_user">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_text_login">Login</string>
    <string name="don_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="btn_text_createaccount">Únete</string>
    <string name="toolbar_tittle_account">Crear Cuenta</string>
    <string name="user_name_card">Jerson Gomez</string>
    <string name="first_word_card">Hace</string>
    <string name="time_card">4 días</string>
    <string name="likenumber_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Persona honesta, confiable, proactiva y creativa en lo que realizo, amante de la música y apasionado por las motos. Profesionalmente soy una persona responsable y con gran capacidad de autoaprendizaje, dispuesta a asumir retos en los proyectos personales y empresariales.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="tomar_foto">Tomar Foto</string>
</resources>
